# agentic-lit-llm

./: .gitignore  README.md  generate-related-work.ipynb  main.py  pipeline.py  pyproject.toml  vectorstore.py
api/: litllm.py
