[project]
name = "agentic-lit-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.0",
    "langchain-openai>=0.3.27",
    "openai-agents>=0.3.3",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.1.1",
    "rich>=13.9.4",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
    "rank-bm25>=0.2.2",
    "typer>=0.15.2",
    "nest-asyncio>=1.6.0",
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]
