[project]
name = "agentic-lit-llm"
version = "0.1.0"
description = "Automated literature review generation using agentic RAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "jupyterlab>=4.4.7",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.0",
    "openai-agents>=0.3.3",
    "python-dotenv>=1.1.1",
    "rich>=13.9.4",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
    "rank-bm25>=0.2.2",
    "typer>=0.15.2",
    "nest-asyncio>=1.6.0"
]
